# NGAReminder

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.github/workflows/: docker-publish.yml  extension-release.yml
extension/: README.md  background.js  manifest.json  popup.html  popup.js  styles.css
extension-standalone/: README.md  background.js  i18n.js  manifest.json  nga-api.js  popup.html  popup.js  posts.html  posts.js  styles.css
py_server/: Dockerfile  main.py
py_server/data/: schema_monitor.sql
py_server/docs/: API_ANALYSIS.md  CHANGELOG.md  CONFIG_MONITOR.md  DATABASE.md  MONITORING_IMPROVEMENTS.md
py_server/src/: api.py  monitor.py  nga_crawler.py
py_server/tests/: test_api.py  verify_schema.py
server/: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements.txt  run_server.sh
server/config/: config.example.json
server/data/: schema.sql
server/docs/: GETTING_STARTED.md  MONITOR.md  NOTIFICATIONS.md  PER_THREAD_INTERVALS.md  PROJECT_SUMMARY.md  RATE_LIMITING.md  README.md
server/src/: config_holder.rs  crawler.rs  database.py  main.rs  monitor.rs  notification.py  notifier.rs  web_server.rs
server/src/model/: config.rs  mod.rs  nga_thread.rs
