[package]
name = "NGAReminder"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["form", "json"] }
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
url = "2.5.8"
async-trait = "0.1"